--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -4410,6 +4410,649 @@ footer {
 }
 /*login popup css end*/
 
+/*detail logged page css start*/
+
+.detail-logged-page {
+  .breadcum-wrapper {
+    padding: 3rem 0 1rem;
+  }
+
+  @include media767 {
+    .banner-wrapper {
+      height: auto;
+    }
+
+    footer {
+      background-color: #ffffff;
+    }
+  }
+}
+
+.detail-logged-slider {
+  .owl-dots {
+    position: absolute;
+    bottom: 1rem;
+    left: 0;
+    right: 0;
+    margin: auto;
+
+    .owl-dot {
+      span {
+        height: 1.6rem;
+        width: 1.6rem;
+        background-color: #ffffff;
+        opacity: 0.5;
+      }
+
+      &.active {
+        span {
+          opacity: 1;
+          background-color: #ffffff;
+        }
+      }
+    }
+  }
+}
+
+.social-icons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 1rem;
+
+  li {
+    padding: 0 0.7rem;
+
+    a {
+      img {
+        max-height: 2.7rem;
+        max-width: 2.7rem;
+        width: 100%;
+      }
+    }
+  }
+}
+
+.detail-wrapper {
+  padding-bottom: 10rem;
+
+  .detail-ttl {
+    font-size: 4.1rem;
+    line-height: 1.2;
+    margin-top: 1.5rem;
+  }
+
+  .review-wrapper {
+    margin-top: 1.5rem;
+
+    .review {
+      max-height: 3.3rem;
+      margin-right: 0.7rem;
+    }
+
+    .review-count {
+      font-size: 2.5rem;
+      font-weight: 500;
+      color: #9fb203;
+      line-height: 1;
+      margin-right: 3rem;
+    }
+
+    .heart {
+      max-height: 3.3rem;
+      margin-right: 1.5rem;
+    }
+
+    .fvt-btn {
+      color: #b7326b;
+      border: 1px solid #b7326b;
+      padding: 1rem 3.5rem;
+      display: block;
+      font-size: 1.4rem;
+    }
+  }
+
+  .activities-wrapper {
+    .activities-title {
+      font-size: 3.3rem;
+      margin: 2rem 0;
+    }
+
+    .activities-tile {
+      text-align: center;
+      max-width: 20%;
+
+      .activities-img {
+        max-width: 8.9rem;
+        margin: auto;
+        margin-bottom: 1rem;
+        height: 8.9rem;
+        object-fit: contain;
+      }
+
+      .activities-ttl {
+        font-weight: 500;
+      }
+
+      .activities-desc {
+        font-weight: 500;
+        font-size: 1.42rem;
+      }
+
+      .divider {
+        margin: 0.7rem;
+      }
+
+      &:nth-last-child(even) {
+        .divider {
+          transform: rotate(7deg);
+        }
+      }
+    }
+  }
+
+  .space-wrapper {
+    .space-title {
+      font-size: 3.3rem;
+      margin: 2rem 0;
+    }
+
+    .space-tile {
+      text-align: center;
+
+      .space-img {
+        margin: auto;
+        margin-bottom: 1rem;
+        height: 8.9rem;
+        object-fit: contain;
+      }
+
+      .space-ttl {
+        font-weight: 500;
+        line-height: 1.3;
+
+        sup {
+          font-size: 1.5rem;
+        }
+      }
+
+      .space-desc {
+        font-weight: 500;
+        font-size: 1.42rem;
+      }
+
+      .divider {
+        margin: 0.7rem;
+      }
+
+      &:nth-last-child(even) {
+        .divider {
+          transform: rotate(7deg);
+        }
+      }
+    }
+  }
+
+  .space-desc {
+    line-height: 1.2;
+    font-size: 1.5rem;
+  }
+
+  .space-rule-wrapper {
+    margin-bottom: 5rem;
+
+    p {
+      line-height: 1.2;
+      font-size: 1.3rem;
+    }
+
+    h4 {
+      font-size: 3.3rem;
+      margin: 1.5rem 0;
+    }
+  }
+
+  .timing-wrapper,
+  .pricing-wrapper {
+    margin: 2rem 0;
+
+    .timing-header,
+    .pricing-header {
+      flex-wrap: wrap;
+      background: transparent;
+      border: none;
+
+      .divider {
+        margin: 0.5rem 0;
+        transform: rotate(2deg);
+      }
+
+      .accordion-icon {
+        max-width: 4.5rem;
+      }
+
+      .accordion-ttl {
+        font-size: 3.3rem;
+
+        .fa-angle-down {
+          vertical-align: middle;
+          font-size: 2.8rem;
+          transition: all ease-in 0.3s;
+        }
+      }
+    }
+    .timing-body,
+    .pricing-body {
+      p {
+        font-size: 1.7rem;
+        font-weight: 500;
+        line-height: 1.2;
+      }
+    }
+
+    &:first-child {
+      .timing-header {
+        .divider {
+          transform: rotate(4.5deg);
+        }
+      }
+    }
+
+    &:nth-child(2) {
+      padding-left: 3rem;
+    }
+  }
+
+  .accordion {
+    .accordion-item {
+      margin: 2rem 0;
+
+      .accordion-header {
+        .accordion-button {
+          flex-wrap: wrap;
+          background: transparent;
+          border: none;
+
+          .divider {
+            margin: 0.5rem 0;
+            transform: rotate(2deg);
+          }
+
+          .accordion-icon {
+            max-width: 4.5rem;
+          }
+
+          .accordion-ttl {
+            font-size: 3.3rem;
+
+            .fa-angle-down {
+              vertical-align: middle;
+              font-size: 2.8rem;
+              transition: all ease-in 0.3s;
+            }
+          }
+
+          &::after {
+            display: none;
+          }
+
+          &:focus {
+            box-shadow: none;
+          }
+
+          &.collapsed {
+            .accordion-ttl {
+              .fa-angle-down {
+                transform: rotate(-180deg);
+                transition: all ease-in 0.3s;
+              }
+            }
+          }
+        }
+      }
+
+      .accordion-collapse {
+        border: none;
+
+        .accordion-body {
+          padding: 1rem 1.25rem 2.5rem;
+
+          p {
+            font-size: 1.7rem;
+            font-weight: 500;
+            line-height: 1.2;
+          }
+        }
+
+        &.collapsing {
+          transition: height 0.5s ease;
+        }
+      }
+
+      &:first-child {
+        .accordion-header {
+          .accordion-button {
+            .divider {
+              transform: rotate(4.5deg);
+            }
+          }
+        }
+      }
+
+      &:nth-child(odd) {
+        border-right: 0.2rem solid #666;
+        padding-right: 2rem;
+      }
+
+      &:nth-child(even) {
+        padding-left: 2rem;
+      }
+    }
+  }
+
+  .testimonials {
+    h4 {
+      font-size: 3.3rem;
+      margin-bottom: 3rem;
+    }
+
+    .testimonial-tile {
+      padding: 2rem 1.5rem;
+      background-color: #0000000a;
+      margin: auto;
+
+      .testi-user-img {
+        height: 6rem;
+        width: 6rem;
+        border-radius: 100%;
+        margin: auto;
+        object-fit: contain;
+      }
+
+      .testi-user-surname,
+      .testi-user-name {
+        font-style: italic;
+        line-height: 1.2;
+      }
+
+      .testimonial-desc {
+        font-style: italic;
+        line-height: 1.4;
+      }
+
+      &:nth-child(odd) {
+        .divider {
+          transform: rotate(7deg);
+        }
+      }
+    }
+
+    .space-btn {
+      margin-top: 4rem;
+
+      a {
+        p {
+          color: #ffffff;
+        }
+      }
+    }
+  }
+
+  .position-wrapper {
+    .position-header {
+      display: flex;
+      align-items: flex-end;
+      justify-content: space-between;
+
+      img {
+        max-height: 5.8rem;
+      }
+
+      p {
+        font-size: 1.5rem;
+        line-height: 1.5;
+        padding-bottom: 0.5rem;
+      }
+    }
+
+    .position-body {
+      h4 {
+        font-size: 3.3rem;
+      }
+
+      .position-ttl {
+        margin-bottom: 1.3rem;
+      }
+
+      .position-img {
+        margin: 2rem 0 3rem;
+      }
+
+      p {
+        font-size: 1.5rem;
+        line-height: 1.1;
+      }
+    }
+  }
+
+  .booking-form-wrapper {
+    padding: 3rem;
+    width: 92%;
+    margin-left: auto;
+    position: sticky;
+    top: 12rem;
+    background-image: url("../images/booking-form-bg.png");
+    background-position: center bottom;
+    background-size: cover;
+    padding-bottom: 10rem;
+
+    .booking-form-ttl {
+      font-weight: 500;
+      margin-bottom: 2.5rem;
+
+      span {
+        font-size: 3rem;
+        font-weight: 500;
+      }
+    }
+
+    .booking-form {
+      .form-label {
+        font-size: 2rem;
+        font-weight: 500;
+        margin-bottom: 1rem;
+      }
+
+      .form-check {
+        padding-left: 0.5rem;
+        display: flex;
+        align-items: center;
+
+        .form-check-label {
+          font-size: 1.8rem;
+          font-weight: 400;
+        }
+
+        .form-check-input {
+          height: 2rem;
+          width: 2rem;
+          border: 0.2rem solid #000000;
+          font-size: 1.5rem;
+          background-color: transparent;
+          margin: 0;
+          margin-right: 1rem;
+
+          &:checked {
+            background-image: url("../images/check-b.png");
+          }
+        }
+      }
+
+      .form-control {
+        height: 4rem;
+        border: 0.4rem solid #cccccc50;
+        font-size: 1.5rem;
+
+        &:focus {
+          box-shadow: none;
+        }
+
+        &#date,
+        &.form-select {
+          background-image: url("../images/form-arrow-b.png");
+          background-size: 1.5rem;
+          background-repeat: no-repeat;
+          background-position: right 1rem center;
+
+          &::-webkit-calendar-picker-indicator {
+            opacity: 0;
+          }
+        }
+      }
+
+      textarea {
+        &.form-control {
+          height: 12rem;
+        }
+      }
+
+      .input-group {
+        font-size: 1.4rem;
+        border: 0.4rem solid #cccccc50;
+
+        label {
+          z-index: 3;
+          opacity: 0.65;
+        }
+
+        .form-control {
+          border: none;
+          font-size: 1.4rem;
+
+          &::-webkit-inner-spin-button,
+          ::-webkit-outer-spin-button {
+            appearance: none;
+          }
+        }
+
+        .form-select {
+          padding-top: 0.625rem;
+          font-size: 1.4rem;
+        }
+
+        .button-minus,
+        .button-plus {
+          background: no-repeat;
+          border: none;
+          height: calc(3.5rem + 2px);
+          width: calc(3.5rem + 2px);
+          border-left: 0.4rem solid #cccccc50;
+          margin-left: 0 !important;
+          color: #333;
+          font-size: 2.4rem;
+          background: #fff;
+          height: 4rem;
+        }
+      }
+
+      .action-btn {
+        .btn {
+          width: 100%;
+          font-size: 1.8rem;
+          text-transform: uppercase;
+          border: 0.4rem solid #cccccc50;
+        }
+
+        .btn-secondary {
+          background-color: #333;
+          padding: 1.5rem;
+          margin-bottom: 1.5rem;
+        }
+
+        .btn-secondary-outline {
+          border: 0.2rem solid #333;
+          padding: 0.5rem;
+        }
+      }
+
+      .estimeted-price-wrapper {
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+
+        .estimeted-price-ttl {
+          font-size: 2rem;
+          font-weight: 500;
+          margin-bottom: 1rem;
+          line-height: 1;
+        }
+
+        .estimeted-price {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+
+          p {
+            font-size: 1.5rem;
+            font-weight: 500;
+          }
+
+          h4 {
+            font-size: 2.5rem;
+            font-weight: 500;
+            line-height: 1.2;
+          }
+        }
+      }
+    }
+  }
+
+  @include media1921 {
+    .booking-form-wrapper {
+      width: 97%;
+
+      .booking-form {
+        .form-control {
+          &#date {
+            padding-right: 0;
+            font-size: 1.3rem;
+          }
+        }
+      }
+    }
+  }
+
+  @include media767 {
+    .activities-wrapper {
+      .activities-tile {
+        max-width: 30%;
+      }
+    }
+
+    .accordion {
+      .accordion-item {
+        &:nth-child(odd) {
+          border: none;
+        }
+      }
+    }
+
+    .testimonials {
+      margin: 0 auto 3rem;
+
+      .testimonial-tile {
+        margin: 2rem 0;
+      }
+    }
+
+    .booking-form-wrapper {
+      width: 100%;
+      margin: 3rem -1rem 0;
+    }
+  }
+}
+
+/*detail logged page css end*/
+
 /*contact page css start*/
 .contact-wrapper {
   .gx-5 {
