--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -4417,13 +4417,17 @@ footer {
     padding: 3rem 0 1rem;
   }
 
+  footer {
+    background-color: #ffffff;
+  }
+
   @include media767 {
     .banner-wrapper {
       height: auto;
     }
 
     footer {
-      background-color: #ffffff;
+      background-position: center top;
     }
   }
 }
@@ -4449,6 +4453,34 @@ footer {
           opacity: 1;
           background-color: #ffffff;
         }
+      }
+    }
+  }
+
+  .owl-nav {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 100%;
+
+    .owl-prev {
+      height: 2.5rem;
+      width: 2.5rem;
+      left: 0;
+      position: absolute;
+    }
+
+    .owl-next {
+      height: 5rem;
+      width: 2.5rem;
+      right: 0;
+      position: absolute;
+      transform: rotate(180deg);
+    }
+
+    [class*="owl-"] {
+      &:hover {
+        background: none;
       }
     }
   }
@@ -4799,6 +4831,8 @@ footer {
   }
 
   .position-wrapper {
+    margin-top: 3rem;
+
     .position-header {
       display: flex;
       align-items: flex-end;
@@ -4809,7 +4843,7 @@ footer {
       }
 
       p {
-        font-size: 1.5rem;
+        font-size: 2rem;
         line-height: 1.5;
         padding-bottom: 0.5rem;
       }
@@ -4861,12 +4895,14 @@ footer {
         font-size: 2rem;
         font-weight: 500;
         margin-bottom: 1rem;
+        padding-left: 0.4rem;
       }
 
       .form-check {
         padding-left: 0.5rem;
         display: flex;
         align-items: center;
+        margin-bottom: 3rem;
 
         .form-check-label {
           font-size: 1.8rem;
@@ -4965,7 +5001,7 @@ footer {
 
         .btn-secondary {
           background-color: #333;
-          padding: 1.5rem;
+          padding: 1rem;
           margin-bottom: 1.5rem;
         }
 
@@ -5021,7 +5057,24 @@ footer {
     }
   }
 
+  @include media991 {
+    .booking-form-wrapper {
+      .booking-form {
+        .form-label {
+          font-size: 1.8rem;
+        }
+      }
+    }
+  }
+
   @include media767 {
+    .timing-wrapper,
+    .pricing-wrapper {
+      &:nth-child(2) {
+        padding-left: calc(var(--bs-gutter-x) / 2);
+      }
+    }
+
     .activities-wrapper {
       .activities-tile {
         max-width: 30%;
@@ -5030,8 +5083,13 @@ footer {
 
     .accordion {
       .accordion-item {
+        margin: 1rem 0;
+
         &:nth-child(odd) {
           border: none;
+        }
+        &:nth-child(even) {
+          padding-left: calc(var(--bs-gutter-x) / 2);
         }
       }
     }
@@ -5044,14 +5102,330 @@ footer {
       }
     }
 
+    .space-rule-wrapper {
+      padding: 0 1.25rem;
+      margin-bottom: 3rem;
+    }
+
+    .position-wrapper {
+      padding: 0 1.25rem;
+    }
+
     .booking-form-wrapper {
       width: 100%;
-      margin: 3rem -1rem 0;
+      margin: 3rem 0 0;
+    }
+  }
+
+  @include media576 {
+    padding-bottom: 3rem;
+
+    .timing-wrapper,
+    .pricing-wrapper {
+      .timing-header,
+      .pricing-header {
+        .accordion-ttl {
+          line-height: 1;
+          margin-bottom: 2rem;
+          font-size: 3.1rem;
+        }
+      }
+    }
+
+    .accordion {
+      .accordion-item {
+        margin: 1rem 0;
+
+        .accordion-header {
+          .accordion-button {
+            .accordion-ttl {
+              font-size: 3.1rem;
+            }
+          }
+        }
+      }
+    }
+
+    .space-rule-wrapper {
+      h4 {
+        font-size: 3.1rem;
+      }
+    }
+
+    .activities-wrapper {
+      .activities-title {
+        font-size: 3.1rem;
+        margin-bottom: 0;
+      }
+
+      .activities-tile {
+        max-width: 50%;
+        flex: 0 0 auto;
+        margin-top: 2rem;
+      }
+    }
+
+    .space-wrapper {
+      .space-title {
+        font-size: 3.1rem;
+        margin-bottom: 0;
+      }
+
+      .space-tile {
+        margin-top: 2rem;
+      }
+    }
+
+    .testimonials {
+      padding: 0 1.25rem;
+    }
+
+    .position-wrapper {
+      .position-header {
+        p {
+          font-size: 1.5rem;
+        }
+      }
+      .position-body {
+        h4 {
+          font-size: 3.1rem;
+          line-height: 1.1;
+        }
+      }
+    }
+
+    .review-wrapper {
+      .fvt-btn {
+        padding: 1rem 2.5rem;
+      }
+    }
+
+    .booking-form-wrapper {
+      padding: 2rem;
+      padding-bottom: 7rem;
+
+      .booking-form-ttl {
+        span {
+          font-size: 2.7rem;
+        }
+      }
+
+      .booking-form {
+        .form-label {
+          font-size: 1.5rem;
+        }
+
+        .form-check {
+          .form-check-label {
+            font-size: 1.5rem;
+          }
+        }
+
+        .action-btn {
+          .btn {
+            font-size: 1.5rem;
+
+            &.btn-secondary {
+              padding: 1rem;
+            }
+          }
+        }
+      }
     }
   }
 }
 
 /*detail logged page css end*/
+
+/*detail not logged page css start*/
+.detail-not-logged-page {
+  .detail-wrapper {
+    .position-wrapper {
+      .position-header {
+        p {
+          border: 0.15rem solid #333;
+          padding: 0.5rem;
+        }
+      }
+    }
+  }
+}
+/*detail not logged page css end*/
+
+/*message popup css start*/
+#message-popup {
+  .modal-dialog {
+    max-width: 70rem;
+  }
+
+  .modal-header {
+    display: block;
+    border: none;
+    padding: 0;
+    background: #f8f1c4;
+    height: 100%;
+
+    .user-icon-wrapper {
+      padding: 4rem 0 2.5rem;
+      background-image: url("../images/msg-popup-bg.png");
+      background-position: bottom center;
+      background-size: cover;
+      background-repeat: no-repeat;
+
+      .user-bg {
+        position: absolute;
+        top: 0;
+        height: 100%;
+        object-fit: cover;
+      }
+
+      .user-icon {
+        margin: auto;
+        max-height: 10rem;
+      }
+    }
+
+    .user-name {
+      font-weight: 700;
+      text-align: center;
+      line-height: 1;
+      margin-top: 2rem;
+    }
+
+    .user-desc {
+      font-size: 1.5rem;
+      font-weight: 700;
+      text-align: center;
+      line-height: 1.5;
+    }
+
+    .services-lists {
+      padding: 5rem 1.5rem;
+
+      li {
+        a {
+          font-size: 1.4rem;
+          color: #000000;
+          line-height: 1.5;
+        }
+
+        &.active {
+          a {
+            font-weight: 700;
+          }
+        }
+      }
+    }
+  }
+
+  .modal-body {
+    padding: 0;
+    padding-top: 1rem;
+    padding-right: 2rem;
+    padding-left: 0.5rem;
+
+    .message-ttl {
+      font-weight: 700;
+      margin: 1.5rem 0;
+    }
+
+    .message-desc {
+      font-size: 1.3rem;
+      line-height: 1.4;
+    }
+
+    .message-form {
+      .form-control {
+        height: 15rem;
+        margin-top: 2rem;
+        font-size: 1.3rem;
+      }
+
+      .action-btn {
+        margin-bottom: 1rem;
+
+        .btn {
+          margin: 0.5rem;
+          text-transform: uppercase;
+          padding: 0.7rem 1.5rem;
+          font-weight: 500;
+
+          &.btn-outline-primary {
+            border-color: #e94250;
+            color: #e94250;
+            transition: all 0.3s ease-in;
+            margin-right: 0;
+
+            &:hover {
+              background-color: #e94250;
+              color: #ffffff;
+              transition: all 0.3s ease-in;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  @include media767 {
+    .modal-dialog {
+      width: 70vw;
+    }
+
+    .modal-header {
+      background-color: #ffffff;
+      text-align: center;
+
+      .user-icon-wrapper {
+        background-position: center;
+      }
+    }
+
+    .modal-body {
+      text-align: center;
+      padding: 0 2rem 1rem;
+      background-image: url(../images/msg-popup-bottom-bg.png);
+      background-position: bottom center;
+      background-size: contain;
+      background-repeat: no-repeat;
+
+      .message-form {
+        .form-control {
+          height: 25rem;
+        }
+
+        .action-btn {
+          margin-bottom: 1rem;
+
+          .btn {
+            background-color: #ffffff;
+            color: #000;
+            width: 40%;
+
+            &.btn-outline-primary {
+              border-color: #000;
+              color: #000;
+              width: 60%;
+
+              &:hover {
+                background-color: #fff;
+                color: #000;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  @include media576 {
+    .modal-dialog {
+      margin: 3rem auto;
+      width: 80vw;
+    }
+  }
+}
+/*message popup css end*/
 
 /*contact page css start*/
 .contact-wrapper {
