--- a/css/main.css
+++ b/css/main.css
@@ -5256,12 +5256,16 @@ footer .sec-ttl {
   padding: 3rem 0 1rem;
 }
 
+.detail-logged-page footer {
+  background-color: #ffffff;
+}
+
 @media (max-width: 767.98px) {
   .detail-logged-page .banner-wrapper {
     height: auto;
   }
   .detail-logged-page footer {
-    background-color: #ffffff;
+    background-position: center top;
   }
 }
 
@@ -5283,6 +5287,34 @@ footer .sec-ttl {
 .detail-logged-slider .owl-dots .owl-dot.active span {
   opacity: 1;
   background-color: #ffffff;
+}
+
+.detail-logged-slider .owl-nav {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 100%;
+}
+
+.detail-logged-slider .owl-nav .owl-prev {
+  height: 2.5rem;
+  width: 2.5rem;
+  left: 0;
+  position: absolute;
+}
+
+.detail-logged-slider .owl-nav .owl-next {
+  height: 5rem;
+  width: 2.5rem;
+  right: 0;
+  position: absolute;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.detail-logged-slider .owl-nav [class*="owl-"]:hover {
+  background: none;
 }
 
 .social-icons {
@@ -5637,6 +5669,10 @@ footer .sec-ttl {
   color: #ffffff;
 }
 
+.detail-wrapper .position-wrapper {
+  margin-top: 3rem;
+}
+
 .detail-wrapper .position-wrapper .position-header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -5654,7 +5690,7 @@ footer .sec-ttl {
 }
 
 .detail-wrapper .position-wrapper .position-header p {
-  font-size: 1.5rem;
+  font-size: 2rem;
   line-height: 1.5;
   padding-bottom: 0.5rem;
 }
@@ -5703,6 +5739,7 @@ footer .sec-ttl {
   font-size: 2rem;
   font-weight: 500;
   margin-bottom: 1rem;
+  padding-left: 0.4rem;
 }
 
 .detail-wrapper .booking-form-wrapper .booking-form .form-check {
@@ -5713,6 +5750,7 @@ footer .sec-ttl {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-bottom: 3rem;
 }
 
 .detail-wrapper .booking-form-wrapper .booking-form .form-check .form-check-label {
@@ -5809,7 +5847,7 @@ footer .sec-ttl {
 
 .detail-wrapper .booking-form-wrapper .booking-form .action-btn .btn-secondary {
   background-color: #333;
-  padding: 1.5rem;
+  padding: 1rem;
   margin-bottom: 1.5rem;
 }
 
@@ -5863,12 +5901,28 @@ footer .sec-ttl {
   }
 }
 
+@media (max-width: 991.98px) {
+  .detail-wrapper .booking-form-wrapper .booking-form .form-label {
+    font-size: 1.8rem;
+  }
+}
+
 @media (max-width: 767.98px) {
+  .detail-wrapper .timing-wrapper:nth-child(2),
+  .detail-wrapper .pricing-wrapper:nth-child(2) {
+    padding-left: calc(var(--bs-gutter-x) / 2);
+  }
   .detail-wrapper .activities-wrapper .activities-tile {
     max-width: 30%;
   }
+  .detail-wrapper .accordion .accordion-item {
+    margin: 1rem 0;
+  }
   .detail-wrapper .accordion .accordion-item:nth-child(odd) {
     border: none;
+  }
+  .detail-wrapper .accordion .accordion-item:nth-child(even) {
+    padding-left: calc(var(--bs-gutter-x) / 2);
   }
   .detail-wrapper .testimonials {
     margin: 0 auto 3rem;
@@ -5876,13 +5930,260 @@ footer .sec-ttl {
   .detail-wrapper .testimonials .testimonial-tile {
     margin: 2rem 0;
   }
+  .detail-wrapper .space-rule-wrapper {
+    padding: 0 1.25rem;
+    margin-bottom: 3rem;
+  }
+  .detail-wrapper .position-wrapper {
+    padding: 0 1.25rem;
+  }
   .detail-wrapper .booking-form-wrapper {
     width: 100%;
-    margin: 3rem -1rem 0;
+    margin: 3rem 0 0;
+  }
+}
+
+@media (max-width: 575.98px) {
+  .detail-wrapper {
+    padding-bottom: 3rem;
+  }
+  .detail-wrapper .timing-wrapper .timing-header .accordion-ttl,
+  .detail-wrapper .timing-wrapper .pricing-header .accordion-ttl,
+  .detail-wrapper .pricing-wrapper .timing-header .accordion-ttl,
+  .detail-wrapper .pricing-wrapper .pricing-header .accordion-ttl {
+    line-height: 1;
+    margin-bottom: 2rem;
+    font-size: 3.1rem;
+  }
+  .detail-wrapper .accordion .accordion-item {
+    margin: 1rem 0;
+  }
+  .detail-wrapper .accordion .accordion-item .accordion-header .accordion-button .accordion-ttl {
+    font-size: 3.1rem;
+  }
+  .detail-wrapper .space-rule-wrapper h4 {
+    font-size: 3.1rem;
+  }
+  .detail-wrapper .activities-wrapper .activities-title {
+    font-size: 3.1rem;
+    margin-bottom: 0;
+  }
+  .detail-wrapper .activities-wrapper .activities-tile {
+    max-width: 50%;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 auto;
+            flex: 0 0 auto;
+    margin-top: 2rem;
+  }
+  .detail-wrapper .space-wrapper .space-title {
+    font-size: 3.1rem;
+    margin-bottom: 0;
+  }
+  .detail-wrapper .space-wrapper .space-tile {
+    margin-top: 2rem;
+  }
+  .detail-wrapper .testimonials {
+    padding: 0 1.25rem;
+  }
+  .detail-wrapper .position-wrapper .position-header p {
+    font-size: 1.5rem;
+  }
+  .detail-wrapper .position-wrapper .position-body h4 {
+    font-size: 3.1rem;
+    line-height: 1.1;
+  }
+  .detail-wrapper .review-wrapper .fvt-btn {
+    padding: 1rem 2.5rem;
+  }
+  .detail-wrapper .booking-form-wrapper {
+    padding: 2rem;
+    padding-bottom: 7rem;
+  }
+  .detail-wrapper .booking-form-wrapper .booking-form-ttl span {
+    font-size: 2.7rem;
+  }
+  .detail-wrapper .booking-form-wrapper .booking-form .form-label {
+    font-size: 1.5rem;
+  }
+  .detail-wrapper .booking-form-wrapper .booking-form .form-check .form-check-label {
+    font-size: 1.5rem;
+  }
+  .detail-wrapper .booking-form-wrapper .booking-form .action-btn .btn {
+    font-size: 1.5rem;
+  }
+  .detail-wrapper .booking-form-wrapper .booking-form .action-btn .btn.btn-secondary {
+    padding: 1rem;
   }
 }
 
 /*detail logged page css end*/
+/*detail not logged page css start*/
+.detail-not-logged-page .detail-wrapper .position-wrapper .position-header p {
+  border: 0.15rem solid #333;
+  padding: 0.5rem;
+}
+
+/*detail not logged page css end*/
+/*message popup css start*/
+#message-popup .modal-dialog {
+  max-width: 70rem;
+}
+
+#message-popup .modal-header {
+  display: block;
+  border: none;
+  padding: 0;
+  background: #f8f1c4;
+  height: 100%;
+}
+
+#message-popup .modal-header .user-icon-wrapper {
+  padding: 4rem 0 2.5rem;
+  background-image: url("../images/msg-popup-bg.png");
+  background-position: bottom center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+#message-popup .modal-header .user-icon-wrapper .user-bg {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+#message-popup .modal-header .user-icon-wrapper .user-icon {
+  margin: auto;
+  max-height: 10rem;
+}
+
+#message-popup .modal-header .user-name {
+  font-weight: 700;
+  text-align: center;
+  line-height: 1;
+  margin-top: 2rem;
+}
+
+#message-popup .modal-header .user-desc {
+  font-size: 1.5rem;
+  font-weight: 700;
+  text-align: center;
+  line-height: 1.5;
+}
+
+#message-popup .modal-header .services-lists {
+  padding: 5rem 1.5rem;
+}
+
+#message-popup .modal-header .services-lists li a {
+  font-size: 1.4rem;
+  color: #000000;
+  line-height: 1.5;
+}
+
+#message-popup .modal-header .services-lists li.active a {
+  font-weight: 700;
+}
+
+#message-popup .modal-body {
+  padding: 0;
+  padding-top: 1rem;
+  padding-right: 2rem;
+  padding-left: 0.5rem;
+}
+
+#message-popup .modal-body .message-ttl {
+  font-weight: 700;
+  margin: 1.5rem 0;
+}
+
+#message-popup .modal-body .message-desc {
+  font-size: 1.3rem;
+  line-height: 1.4;
+}
+
+#message-popup .modal-body .message-form .form-control {
+  height: 15rem;
+  margin-top: 2rem;
+  font-size: 1.3rem;
+}
+
+#message-popup .modal-body .message-form .action-btn {
+  margin-bottom: 1rem;
+}
+
+#message-popup .modal-body .message-form .action-btn .btn {
+  margin: 0.5rem;
+  text-transform: uppercase;
+  padding: 0.7rem 1.5rem;
+  font-weight: 500;
+}
+
+#message-popup .modal-body .message-form .action-btn .btn.btn-outline-primary {
+  border-color: #e94250;
+  color: #e94250;
+  -webkit-transition: all 0.3s ease-in;
+  transition: all 0.3s ease-in;
+  margin-right: 0;
+}
+
+#message-popup .modal-body .message-form .action-btn .btn.btn-outline-primary:hover {
+  background-color: #e94250;
+  color: #ffffff;
+  -webkit-transition: all 0.3s ease-in;
+  transition: all 0.3s ease-in;
+}
+
+@media (max-width: 767.98px) {
+  #message-popup .modal-dialog {
+    width: 70vw;
+  }
+  #message-popup .modal-header {
+    background-color: #ffffff;
+    text-align: center;
+  }
+  #message-popup .modal-header .user-icon-wrapper {
+    background-position: center;
+  }
+  #message-popup .modal-body {
+    text-align: center;
+    padding: 0 2rem 1rem;
+    background-image: url(../images/msg-popup-bottom-bg.png);
+    background-position: bottom center;
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+  #message-popup .modal-body .message-form .form-control {
+    height: 25rem;
+  }
+  #message-popup .modal-body .message-form .action-btn {
+    margin-bottom: 1rem;
+  }
+  #message-popup .modal-body .message-form .action-btn .btn {
+    background-color: #ffffff;
+    color: #000;
+    width: 40%;
+  }
+  #message-popup .modal-body .message-form .action-btn .btn.btn-outline-primary {
+    border-color: #000;
+    color: #000;
+    width: 60%;
+  }
+  #message-popup .modal-body .message-form .action-btn .btn.btn-outline-primary:hover {
+    background-color: #fff;
+    color: #000;
+  }
+}
+
+@media (max-width: 575.98px) {
+  #message-popup .modal-dialog {
+    margin: 3rem auto;
+    width: 80vw;
+  }
+}
+
+/*message popup css end*/
 /*contact page css start*/
 .contact-wrapper .gx-5 {
   --bs-gutter-x: 15rem;
