--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -3393,6 +3393,12 @@ footer {
           margin-top: 0.3rem;
         }
 
+        h3 {
+          font-size: 2rem;
+          line-height: 3.2rem;
+          font-weight: bold;
+        }
+
         .magazine-desc {
           font-size: 1.5rem;
           line-height: 1.5;
@@ -3424,8 +3430,9 @@ footer {
           margin-top: 1rem;
         }
 
-        h6 {
+        h3 {
           font-size: 2.5rem;
+          font-weight: bold;
         }
 
         .magazine-desc {
@@ -3580,6 +3587,12 @@ footer {
 
         .camera-icon {
           max-width: 5rem;
+        }
+
+        h3 {
+          font-size: 2rem;
+          line-height: 3.2rem;
+          font-weight: bold;
         }
 
         .magazine-ttl {
