--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -1376,16 +1376,6 @@ header {
     margin-bottom: 4rem;
   }
 
-  .read-more {
-    display: block;
-    margin-bottom: 3rem;
-
-    p {
-      padding: 1.5rem 1rem;
-      color: #fff;
-    }
-  }
-
   @include media1680 {
     .service-tile {
       .service-img {
@@ -1402,6 +1392,15 @@ header {
     .service-tile {
       margin-bottom: 3rem;
     }
+  }
+}
+
+.read-more {
+  display: block;
+
+  p {
+    padding: 1.5rem 1rem;
+    color: #fff;
   }
 }
 
@@ -3396,7 +3395,7 @@ footer {
         h3 {
           font-size: 2rem;
           line-height: 3.2rem;
-          font-weight: bold;
+          font-weight: 500;
         }
 
         .magazine-desc {
@@ -3432,7 +3431,7 @@ footer {
 
         h3 {
           font-size: 2.5rem;
-          font-weight: bold;
+          font-weight: 500;
         }
 
         .magazine-desc {
@@ -3592,7 +3591,7 @@ footer {
         h3 {
           font-size: 2rem;
           line-height: 3.2rem;
-          font-weight: bold;
+          font-weight: 500;
         }
 
         .magazine-ttl {
