--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -1135,9 +1135,9 @@ header {
 .numbers-wrapper {
   padding: 3rem 0 10rem;
 
-  .section-ttl {
-    margin: 1rem 0;
-  }
+  // .section-ttl {
+  //   margin: 1rem 0;
+  // } 
 
   .numbers-tile {
     display: flex;
