--- a/css/main.css
+++ b/css/main.css
@@ -1461,6 +1461,17 @@ header .header-wrapper .menu nav .navbar-nav .nav-item::-webkit-scrollbar-thumb 
 
 /*spazi section css end*/
 /*how work section css start*/
+.read-more {
+  margin-top: 3rem;
+  display: block;
+}
+.read-more p {
+  padding: 1.5rem 1rem;
+  color: #fff;
+  display: inline-block;
+  font-size: 2rem;
+}
+
 .how-work-wrapper {
   padding: 10rem 0 1.5rem;
   background-image: url("../images/how-work-bg.png");
@@ -1511,16 +1522,6 @@ header .header-wrapper .menu nav .navbar-nav .nav-item::-webkit-scrollbar-thumb 
 .how-work-wrapper .gx-5 .how-work-tiles .how-work-tile .how-work-desc:last-child .divider {
   padding: 0;
   transform: rotate(0);
-}
-.how-work-wrapper .read-more {
-  margin-top: 3rem;
-  display: block;
-}
-.how-work-wrapper .read-more p {
-  padding: 1.5rem 1rem;
-  color: #fff;
-  display: inline-block;
-  font-size: 2rem;
 }
 @media (min-width: 1681px) {
   .how-work-wrapper .gx-5 {
