--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -616,7 +616,6 @@ header {
 
 /*how work section css start*/
 .read-more {
-  margin-top: 3rem;
   display: block;
 
   p {
@@ -644,6 +643,7 @@ header {
         padding: 3.5rem 3rem;
         background-color: #ffffffb5;
         height: 80%;
+        margin-bottom:3rem;
 
         h4 {
           color: #000000;
